<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.suditouri_ostfalia_android.suditouri.ImpressumActivity"
    tools:showIn="@layout/activity_impressum">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_impressum_ueberschrift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="73dp"
                android:text="@string/impressum_ueberschrift_1"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_impressum_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_1" />

            <TextView
                android:id="@+id/textView_impressum_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_2" />

            <TextView
                android:id="@+id/textView_impressum_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_3" />

            <TextView
                android:id="@+id/textView_impressum_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_4" />

            <TextView
                android:id="@+id/textView_impressum_ueberschrift2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/impressum_ueberschrift_2"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_impressum_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_5" />

            <TextView
                android:id="@+id/textView_impressum_text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_6" />

            <TextView
                android:id="@+id/textView_impressum_text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_7" />

            <TextView
                android:id="@+id/textView_impressum_ueberschrift3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/impressum_ueberschrift_3"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_impressum_text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_8" />

            <TextView
                android:id="@+id/textView_impressum_text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_9" />

            <TextView
                android:id="@+id/textView_impressum_ueberschrift4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/impressum_ueberschrift_4"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_impressum_text10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_10" />

            <TextView
                android:id="@+id/textView_impressum_text11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/impressum_text_11" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
