<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.suditouri_ostfalia_android.suditouri.MainActivity"
    tools:showIn="@layout/activity_main">


    <ImageView
        android:id="@+id/main_ueberschrift_suderburg"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:src="@drawable/logo_wassererlebnispfadklein" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_ueberschrift_suderburg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/scrollView"
            android:orientation="vertical">
            <!--Route 1-->

            <ImageButton
                android:id="@+id/imageButtonKML1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/wep1haupt" />

            <TextView
                android:id="@+id/main_route_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_route_1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_route_1_laenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/main_route_1_laenge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!--Route 2-->

            <ImageButton
                android:id="@+id/imageButtonKML2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/wep2haupt" />

            <TextView
                android:id="@+id/main_route_2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_route_2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/main_route_2_laenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/main_route_2_laenge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!--Route 3-->

            <ImageButton
                android:id="@+id/imageButtonKML3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/wep3haupt" />

            <TextView
                android:id="@+id/main_route_3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_route_3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/main_route_3_laenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/main_route_3_laenge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!--Route 4-->

            <ImageButton
                android:id="@+id/imageButtonKML4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/wep4haupt" />

            <TextView
                android:id="@+id/main_route_4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_route_4"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/main_route_4_laenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/main_route_4_laenge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!--Route 5-->

            <ImageButton
                android:id="@+id/imageButtonKML5"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/wep5haupt" />

            <TextView
                android:id="@+id/main_route_5_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_route_5"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/main_route_5_laenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/main_route_5_laenge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!--Route 6-->

            <ImageButton
                android:id="@+id/imageButtonKML6"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/wep6haupt" />

            <TextView
                android:id="@+id/main_route_6_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_route_6"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/main_route_6_laenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/main_route_6_laenge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!--Route 7-->

            <ImageButton
                android:id="@+id/imageButtonKML7"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/wep7haupt" />

            <TextView
                android:id="@+id/main_route_7_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_route_7"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/main_route_7_laenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/main_route_7_laenge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
